--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,10 +17,11 @@
                    id="map">
                 <l:osmlayer/>
                 <l:locate position="bottomleft" flyTo="true"/>
-<!--                <l:wms wmsName="bluemarble"
-                       layers="ne:ne"
-                       url="https://demo.boundlessgeo.com/geoserver/ows?"/>-->
-                <!--<l:heatmap points="#{simpleController.modelList}"/>-->
+                <!--                <l:wms wmsName="bluemarble"
+                                       layers="ne:ne"
+                                       url="https://demo.boundlessgeo.com/geoserver/ows?"/>-->
+                                <!--<l:heatmap points="#{simpleController.modelList}"/>-->
+                <l:zoomLevel/>
             </l:map>
         </h:form>
     </h:body>
