--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,6 +14,7 @@
                    maxZoom="20"
                    minZoom="1"
                    zoom="10"
+                   model="#{simpleController.model}"
                    id="map">
                 <l:osmlayer/>
                 <l:locate position="bottomleft" flyTo="true"/>
