--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,11 +18,12 @@
                    id="map">
                 <l:osmlayer/>
                 <l:locate position="bottomleft" flyTo="true"/>
-                <!--                <l:wms wmsName="bluemarble"
+                               <!-- <l:wms wmsName="bluemarble"
                                        layers="ne:ne"
-                                       url="https://demo.boundlessgeo.com/geoserver/ows?"/>-->
-                                <!--<l:heatmap points="#{simpleController.modelList}"/>-->
+                                       url="https://demo.boundlessgeo.com/geoserver/ows?"/>
+                                <l:heatmap points="#{simpleController.modelList}"/>-->
                 <l:zoomLevel/>
+                <l:logo logoPath="resources/images/leaf-green.png" height="100"/>
             </l:map>
         </h:form>
     </h:body>
