--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,6 +15,8 @@
                    minZoom="1"
                    zoom="10"
                    model="#{simpleController.model}"
+                   loadingControl="true"
+                   drawToolbar="true"
                    id="map">
                 <l:osmlayer/>
                 <l:locate position="bottomleft" flyTo="true"/>
@@ -24,6 +26,7 @@
                                 <l:heatmap points="#{simpleController.modelList}"/>-->
                 <l:zoomLevel/>
                 <l:logo logoPath="resources/images/leaf-green.png" height="100"/>
+                <l:drawToolbar/>
             </l:map>
         </h:form>
     </h:body>
