--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -25,8 +25,9 @@
                                        url="https://demo.boundlessgeo.com/geoserver/ows?"/>
                                 <l:heatmap points="#{simpleController.modelList}"/>-->
                 <l:zoomLevel/>
-                <l:logo logoPath="resources/images/leaf-green.png" height="100"/>
+                <!--<l:logo logoPath="resources/images/leaf-green.png" height="100"/>-->
                 <l:drawToolbar/>
+                <l:miniMap position="bottomright" toggleDisplay="true"/>
             </l:map>
         </h:form>
     </h:body>
