--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,6 +28,7 @@
                 <!--<l:logo logoPath="resources/images/leaf-green.png" height="100"/>-->
                 <l:drawToolbar/>
                 <l:miniMap position="bottomright" toggleDisplay="true"/>
+                <l:scale/>
             </l:map>
         </h:form>
     </h:body>
