--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
                    drawToolbar="true"
                    id="map">
                 <l:osmlayer/>
-                <l:locate position="bottomleft" flyTo="true"/>
+                <!--<l:locate position="bottomleft" flyTo="true"/>-->
                                <!-- <l:wms wmsName="bluemarble"
                                        layers="ne:ne"
                                        url="https://demo.boundlessgeo.com/geoserver/ows?"/>
@@ -28,7 +28,8 @@
                 <!--<l:logo logoPath="resources/images/leaf-green.png" height="100"/>-->
                 <l:drawToolbar/>
                 <l:miniMap position="bottomright" toggleDisplay="true"/>
-                <l:scale/>
+                <!--<l:scale/>-->
+                <!--<l:thematic/>-->
             </l:map>
         </h:form>
     </h:body>
