--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,6 +30,7 @@
                 <l:miniMap position="bottomright" toggleDisplay="true"/>
                 <!--<l:scale/>-->
                 <!--<l:thematic/>-->
+                <l:coordinates positions="bottomleft"/>
             </l:map>
         </h:form>
     </h:body>
