--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,6 +31,7 @@
                 <!--<l:scale/>-->
                 <!--<l:thematic/>-->
                 <l:coordinates positions="bottomleft"/>
+                <l:buttonBar/>
             </l:map>
         </h:form>
     </h:body>
